--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- BUTTON TO GENERATE QUOTES -->
-    <button class="button"></button>
+    <button class="button">GENERATE QUOTES</button>
 
 
     <script src="script.js"></script>
